# osso-chess-ui

./: Makefile.am  autogen.sh  configure.ac
debian/: changelog  control  copyright  osso-chess-ui.install  osso-chess-ui.links  osso-chess-ui.postinst  osso-chess-ui.postrm  rules
src/: Makefile.am  appdata.hh  chess_communication.cc  chess_communication.hh  chess_core.cc  chess_core.hh  chess_enginecommunication.cc  chess_enginecommunication.hh  chess_log.h  chess_startup.desktop.in  chess_timing.cc  chess_timing.hh  chessui_i18n.hh  com.nokia.osso_chess.service.in  com.nokia.osso_chess.startup.service.in  dbus.c  dbus.h  gdk_draw_image_test.c  main.cc  main.hh  osso-chess-ui.xml.in  osso_chess.conf.in  settings.c  settings.h  sound.c  sound.h  sounds.h  state_save.c  state_save.h
src/babychess/: AUTHORS  LICENSING  Makefile.am  README  alpha_client_image.cc  alpha_client_image.hh  alpha_client_image_stream.cc  alpha_client_image_stream.hh  alpha_server_image.hh  alpha_server_image_stream.cc  alpha_server_image_stream.hh  bit_board.hh  board.cc  board.hh  board_defaults.cc  board_defaults.hh  board_image.cc  board_image.hh  board_settings.cc  board_settings.hh  canvas.cc  canvas.hh  chess_color.hh  client_image.cc  client_image.hh  client_image_stream.hh  constant.cc  constant.hh  data.hh  date.cc  date.hh  dir.cc  dir.hh  display_type.hh  draw_board.cc  draw_board.hh  dynamic.hh  fen.cc  fen.hh  file_name.cc  (+119 more)
src/plugin/: Makefile.am  plugin.c
src/ui/: Makefile.am  callbacks.cc  callbacks.hh  chess_button.cc  chess_button.hh  chess_moves_list.cc  chess_moves_list.hh  chess_status.cc  chess_status.hh  interface.cc  interface.hh
test/: test.pgn
